--- a/workshops/June-2024-SpaDES-workshop.qmd
+++ b/workshops/June-2024-SpaDES-workshop.qmd
@@ -1,7 +1,7 @@
 ---
 title: "Reproducible workflows for landscapes with SpaDES and PERFICT"
 author: "Eliot McIntire"
-description: "A multi-day workshop focusing on learning robust approaches to building reuseable, reproducibe workflows for ecological applications"
+description: "A multi-day workshop focusing on learning robust approaches to building reuseable, reproducible workflows for ecological applications"
 date: "April 17, 2024"
 image: https://besjournals.onlinelibrary.wiley.com/cms/asset/db13319c-88b4-4821-9eaa-a2e62364b399/mee314034-fig-0004-m.jpg
 categories:
