Simple "multiple modules"; not added to _quarto.yml

--- a/training/NewModuleIntro.qmd
+++ b/training/NewModuleIntro.qmd
@@ -1,6 +1,6 @@
 ---
-author      : "Eliot McIntire"
-date        : "May 2024"
+author: "Eliot McIntire"
+date: last-modified
 editor_options:
   chunk_output_type: console
 ---
