--- a/Workshops.qmd
+++ b/Workshops.qmd
@@ -88,7 +88,10 @@ listing:
 :::
 
 ::: {layout="[[60,40], [100]]"}
-After an extended COVID hiatus, we will be holding workshops around [PERFICT](https://onlinelibrary.wiley.com/doi/full/10.1111/ele.13994) and the SpaDES metapackage for R as a means of achieving a PERFICT approach.
+After an extended COVID hiatus, we will be holding workshops around
+[PERFICT](https://onlinelibrary.wiley.com/doi/full/10.1111/ele.13994)
+and the SpaDES metapackage for R as a means of achieving a PERFICT
+approach.
 
 [![](https://onlinelibrary.wiley.com/cms/asset/680b22bc-1a97-4ab6-8f90-6fd1557e9e27/ele13994-fig-0001-m.jpg)](https://onlinelibrary.wiley.com/doi/full/10.1111/ele.13994)
 
@@ -108,7 +111,6 @@ After an extended COVID hiatus, we will be holding workshops around [PERFICT](ht
 #### Videos
 
 {{< video https://www.youtube.com/watch?v=LyWoID3PU3Q >}}
-
 
 ## Pre-COVID workshops
 
