--- a/training/Scheduling.qmd
+++ b/training/Scheduling.qmd
@@ -199,12 +199,12 @@ this:
 switch(
   eventType,
   init = {
-      sim <- Init(sim)
-      
-      # schedule future event(s)
-      sim <- scheduleEvent(sim, P(sim)$.plotInitialTime, "scheduling", "plot")
-      
-      # here we create a new event type == "predictions" and we schedule it for `start(sim)`
+    sim <- Init(sim)
+    
+    # schedule future event(s)
+    sim <- scheduleEvent(sim, P(sim)$.plotInitialTime, "scheduling", "plot")
+    
+    # here we create a new event type == "predictions" and we schedule it for `start(sim)`
     sim <- scheduleEvent(sim, start(sim), "scheduling", "predictions") 
   },
   ...
@@ -224,12 +224,12 @@ See
 switch(
   eventType,
   init = {...},
-predictions = {
-  # do the Prediction
-  sim <- Prediction(sim)
-  
-  # schedule the next Prediction
-  sim <- scheduleEvent(sim, time(sim) + 1, "scheduling", "predictions") 
+  predictions = {
+    # do the Prediction
+    sim <- Prediction(sim)
+    
+    # schedule the next Prediction
+    sim <- scheduleEvent(sim, time(sim) + 1, "scheduling", "predictions") 
   },
   ...
 )
@@ -237,10 +237,10 @@ predictions = {
 
 ### Double check existing events
 
-If we ran the above changes, we would see an error because the `plotFn`
+If we ran the above changes, we would see an error because `plotFn`
 is, by default, scheduled to run at the time that is specified by
 `.plotInitialTime`, which by default is `start(sim)`. We have no data
-yet at that time. So, we have to update the
+yet at that time. So, we have to schedule `plotFn` to run at `end(sim)`:
 
 ```{r}
 scheduleEvent(sim, end(sim), "scheduling", "plot")
